@@ -1,5 +1,13 @@
 2001-08-17  Kevin Vandersloot <kfv101@psu.edu>
 
+	* interface.c (get_size_string): display the disk space sizes nicer.
+
+	* callbacks.c: remove some debugging stuff.
+
+	* load-graph.c: draw a coordinate axis
+
+2001-08-17  Kevin Vandersloot <kfv101@psu.edu>
+
 	* interface.c: add a clist to show mounted disks. 
 
 	* load-graph.c (load_graph_[start,stop]): make it so data
